# currency-subscription

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
applications/core/: apps.py  models.py
applications/currencies/: apps.py  models.py  services.py  tasks.py
applications/currencies/migrations/: 0001_initial.py
applications/subscriptions/: apps.py  models.py
applications/subscriptions/migrations/: 0001_initial.py
currency/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
